--- a/YellowstonePathology/UI/Gross/PrintBlockPage.xaml
+++ b/YellowstonePathology/UI/Gross/PrintBlockPage.xaml
@@ -130,7 +130,8 @@
                     <RowDefinition Height="*"></RowDefinition>
                     <RowDefinition Height="*"></RowDefinition>
 					<RowDefinition Height="*"></RowDefinition>
-				</Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"></RowDefinition>
+                </Grid.RowDefinitions>
                 
 				<Button Grid.Row="0" Margin="3" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Content="Add Block" Click="ButtonAddBlock_Click" />
 				<Button Grid.Row="1" Margin="3" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Content="Number Pad" Click="ButtonNumberPad_Click" />
@@ -139,6 +140,16 @@
                 <Button Grid.Row="4" Margin="3" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Content="Stains" Click="ButtonStains_Click" />
                 <Button Grid.Row="5" Margin="3" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Content="Hold All" Click="ButtonHoldAll_Click" />
                 <Button Grid.Row="6" Margin="3" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Content="Next" Click="ButtonNext_Click" />
+
+                <!--<Button Content="●" Background="Transparent" Foreground="Black" Click="ButtonEnterAliquotOrderId_Click" HorizontalAlignment="Center" VerticalAlignment="Center"
+								FontFamily="Tw Cen MT Condensed" Margin="5,5,2,2" Width="20" Height="20" BorderBrush="Transparent" BorderThickness="0"
+                        Grid.Row="7">
+                    <Button.Template>
+                        <ControlTemplate TargetType="Button">
+                            <ContentPresenter Content="{TemplateBinding Content}"/>
+                        </ControlTemplate>
+                    </Button.Template>
+                </Button>-->
 
             </Grid>
 		</Grid>
