--- a/YellowstonePathology/UI/Surgical/PathologistWorkspace.xaml
+++ b/YellowstonePathology/UI/Surgical/PathologistWorkspace.xaml
@@ -141,7 +141,16 @@
 							<Button Margin="2" Click="ButtonSearch_Click" ToolTip="Get list for selected patient">
 								<Image Source="/Resources/Patient.ico"></Image>
 							</Button>
-						</ToolBar>
+
+                            <!--<Button Content="T" Background="Transparent" Foreground="Black" Click="ButtonNewScan_Click"  HorizontalAlignment="Center" VerticalAlignment="Center"
+                                FontFamily="Tw Cen MT Condensed" Margin="5,5,2,2" Width="20" Height="20" BorderBrush="Transparent" BorderThickness="0">
+                                <Button.Template>
+                                    <ControlTemplate TargetType="Button">
+                                        <ContentPresenter Content="{TemplateBinding Content}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                                    </ControlTemplate>
+                                </Button.Template>
+                            </Button>-->
+                        </ToolBar>
 					</ToolBarTray>
 				</ToolBarPanel>
 
