--- a/YellowstonePathology/UI/Client/ProviderLookupDialog.xaml
+++ b/YellowstonePathology/UI/Client/ProviderLookupDialog.xaml
@@ -149,11 +149,11 @@
                     <TextBox Grid.Column="1" Grid.Row="0" Name="TextBoxLocationName" Margin="2,2,2,2" HorizontalAlignment="Stretch" VerticalContentAlignment="Center" KeyUp="TextBoxLocationName_KeyUp" />
 
                     <ListView Name="ListViewLocations" Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="1" Margin="2,2,2,2" MouseDoubleClick="ListViewLocations_MouseDoubleClick"
-							 ItemsSource="{Binding Path=FacilityCollection}">
+							 ItemsSource="{Binding Path=LocationCollection}">
                         <ListView.View>
                             <GridView>
-                                <GridViewColumn Header="Name" Width="100" DisplayMemberBinding="{Binding Path=LocationId}" />
-                                <GridViewColumn Header="Phone" Width="250" DisplayMemberBinding="{Binding Path=Description}" />
+                                <GridViewColumn Header="Location Id" Width="250" DisplayMemberBinding="{Binding Path=LocationId}" />
+                                <GridViewColumn Header="Description" Width="450" DisplayMemberBinding="{Binding Path=Description}" />
                             </GridView>
                         </ListView.View>
                     </ListView>
