--- a/YellowstonePathology/UI/Common/UserPreferences.xaml
+++ b/YellowstonePathology/UI/Common/UserPreferences.xaml
@@ -3,15 +3,15 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:sys="clr-namespace:System;assembly=mscorlib"
     Title="User Preferences" Height="540" Width="500" WindowStartupLocation="CenterScreen" WindowStyle="ToolWindow">
-	
+
     <Grid Margin="2,2,2,2">
-		<Grid.ColumnDefinitions>
-			<ColumnDefinition Width="*"></ColumnDefinition>
-		</Grid.ColumnDefinitions>
-		<Grid.RowDefinitions>
-			<RowDefinition Height="*"></RowDefinition>
-			<RowDefinition Height="Auto"></RowDefinition>
-		</Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="Auto"></RowDefinition>
+        </Grid.RowDefinitions>
 
         <TabControl Grid.Column="0" Grid.Row="0" Margin="2,2,2,2">
             <TabItem Header="General">
@@ -49,10 +49,11 @@
                     </ComboBox>
 
                     <TextBlock Grid.Column="0" Grid.Row="3" Margin="2,2,2,2" VerticalAlignment="Center" TextAlignment="Right">Location:</TextBlock>
-                    <ComboBox Grid.Column="1" Grid.Row="3" Name="ComboBoxLocation" ItemsSource="{Binding Path=LocationCollection}" Margin="2,2,2,2"
+                    <ComboBox Grid.Column="1" Grid.Row="2" Name="ComboBoxLocation" ItemsSource="{Binding Path=LocationCollection}" Margin="3,24.8,1.2,5.6"
                               HorizontalAlignment="Stretch" SelectedValue="{Binding Path=UserPreference.LocationId}" SelectedValuePath="LocationId"
-                              DisplayMemberPath="Description" IsEnabled="True">
+                              DisplayMemberPath="Friendly" IsEnabled="True" Grid.RowSpan="2">
                     </ComboBox>
+                    <Button Grid.Column="2" Grid.Row="3" Width="30" Margin="2,2,2,2" Click="ButtonAddLocation_Click" Visibility="{Binding Path=NewButtonVisibility}">Add</Button>
 
                     <TextBlock Grid.Column="0" Grid.Row="4" Margin="2,2,2,2" VerticalAlignment="Center" TextAlignment="Right">Lock Mode:</TextBlock>
                     <ComboBox Grid.Column="1" Grid.Row="4" Margin="2,2,2,2" Text="{Binding Path=UserPreference.LockMode}" IsEditable="True">
@@ -214,12 +215,13 @@
             </TabItem>
 
             <TabItem Header="Other">
-                
+
             </TabItem>
         </TabControl>
 
 
-		<StackPanel Grid.Column="1" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Bottom" Orientation="Horizontal">            
+        <Button Name="ButtonNew" Grid.Column="0" Grid.Row="1" Margin="5,5,5,5" HorizontalAlignment="Left" Click="ButtonNew_Click"  Width="50" Height="30" Visibility="{Binding Path=NewButtonVisibility}">New</Button>
+        <StackPanel Grid.Column="1" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Bottom" Orientation="Horizontal">
             <Button Name="ButtonOK" Margin="5,5,5,5" HorizontalAlignment="Center" Click="ButtonOK_Click" Width="50" Height="30">OK</Button>
             <Button Name="ButtonCancel" Margin="5,5,5,5" HorizontalAlignment="Center" Click="ButtonCancel_Click" Width="50" Height="30">Cancel</Button>
         </StackPanel>
