--- a/YellowstonePathology/UI/Common/UserPreferencesList.xaml
+++ b/YellowstonePathology/UI/Common/UserPreferencesList.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:YellowstonePathology.UI.Common"
         mc:Ignorable="d"
-        Title="User Preferences Selection" Height="300" Width="250">
+        Title="User Preferences Selection" Height="500" Width="500">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
@@ -20,6 +20,8 @@
             <ListView.View>
                 <GridView>
                     <GridViewColumn Header="Location" Width="200" DisplayMemberBinding="{Binding Path=Location}" />
+                    <GridViewColumn Header="Startup" Width="150" DisplayMemberBinding="{Binding Path=StartupPage}" />
+                    <GridViewColumn Header="Port" Width="100" DisplayMemberBinding="{Binding Path=BarcodeScanPort}" />
                 </GridView>
             </ListView.View>
         </ListView>
