--- a/YellowstonePathology/UI/Common/UserPreferencesList.xaml
+++ b/YellowstonePathology/UI/Common/UserPreferencesList.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:YellowstonePathology.UI.Common"
         mc:Ignorable="d"
-        Title="User Preferences Selection" Height="300" Width="250">
+        Title="User Preferences Selection" Height="500" Width="00" WindowStartupLocation="CenterScreen" WindowStyle="ToolWindow">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
