--- a/YellowstonePathology/UI/Common/UserPreferences.xaml
+++ b/YellowstonePathology/UI/Common/UserPreferences.xaml
@@ -49,10 +49,7 @@
                     </ComboBox>
 
                     <TextBlock Grid.Column="0" Grid.Row="3" Margin="2,2,2,2" VerticalAlignment="Center" TextAlignment="Right">Location:</TextBlock>
-                    <ComboBox Grid.Column="1" Grid.Row="2" Name="ComboBoxLocation" ItemsSource="{Binding Path=LocationCollection}" Margin="3,24.8,1.2,5.6"
-                              HorizontalAlignment="Stretch" SelectedValue="{Binding Path=UserPreference.LocationId}" SelectedValuePath="LocationId"
-                              DisplayMemberPath="FriendlyName" IsEnabled="True" Grid.RowSpan="2">
-                    </ComboBox>
+                    <TextBox Grid.Column="1" Grid.Row="3" Name="TextBoxLocation" Text="{Binding Path=UserPreference.Location}" />
 
                     <TextBlock Grid.Column="0" Grid.Row="4" Margin="2,2,2,2" VerticalAlignment="Center" TextAlignment="Right">Lock Mode:</TextBlock>
                     <ComboBox Grid.Column="1" Grid.Row="4" Margin="2,2,2,2" Text="{Binding Path=UserPreference.LockMode}" IsEditable="True">
