--- a/YellowstonePathology/UI/Common/UserPreferencesList.xaml
+++ b/YellowstonePathology/UI/Common/UserPreferencesList.xaml
@@ -16,7 +16,8 @@
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
-        <ListView Name="ListViewUserPreferences" Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2" Margin="2,2,2,2" ItemsSource="{Binding Path=UserPreferenceList}">
+        <ListView Name="ListViewUserPreferences" Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2" Margin="2,2,2,2"
+                  ItemsSource="{Binding Path=UserPreferenceList}" MouseDoubleClick="ListViewUserPreferences_MouseDoubleClick">
             <ListView.View>
                 <GridView>
                     <GridViewColumn Header="Location" Width="200" DisplayMemberBinding="{Binding Path=Location}" />
@@ -26,7 +27,7 @@
             </ListView.View>
         </ListView>
 
-        <!--<Button Name="ButtonAdd" Grid.Column="0" Grid.Row="1" Height="35" Width="100" Margin="5,5,5,5" HorizontalAlignment="Left" Click="ButtonAdd_Click">Add</Button>-->
+        <Button Name="ButtonAdd" Grid.Column="0" Grid.Row="1" Height="35" Width="100" Margin="5,5,5,5" HorizontalAlignment="Left" Click="ButtonAdd_Click">Add</Button>
         <Button Name="ButtonOK" Grid.Column="0" Grid.Row="1" Height="35" Width="100" Margin="5,5,5,5" HorizontalAlignment="Right" Click="ButtonOK_Click">OK</Button>
 
     </Grid>
