--- a/YellowstonePathology/UI/SystemUserDialog.xaml
+++ b/YellowstonePathology/UI/SystemUserDialog.xaml
@@ -25,14 +25,9 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
-
-        <TextBlock Grid.Column="0" Grid.Row="0" Margin="3,3,3,20" HorizontalAlignment="Right" FontWeight="Bold">System User:</TextBlock>
-        <ComboBox Name="ComboBoxUser" Grid.Column="1" Grid.Row="0" Margin="3,3,3,20" ItemsSource="{Binding Path=SystemUserCollection}"
-                  SelectedValuePath="UserId" DisplayMemberPath="UserName" SelectedValue="{Binding Path=SystemUser.UserId}"
-                  SelectionChanged="ComboBoxUser_SelectionChanged"/>
 
         <TextBlock Grid.Column="0" Grid.Row="2" Margin="3,3,3,3" HorizontalAlignment="Right" FontWeight="Bold">User Name:</TextBlock>
         <TextBox Grid.Column="1" Grid.Row="2" Margin="3,3,3,3" Text="{Binding Path=SystemUser.UserName}" />
@@ -64,10 +59,24 @@
         <TextBlock Grid.Column="0" Grid.Row="11" Margin="3,3,3,3" HorizontalAlignment="Right" FontWeight="Bold">Email:</TextBlock>
         <TextBox Grid.Column="1" Grid.Row="11" Margin="3,3,3,3" Text="{Binding Path=SystemUser.EmailAddress}" />
 
-        <Button Name="ButtonNew" Grid.Column="0" Grid.Row="12" Margin="5,5,5,5" Height="30" Width="100" HorizontalAlignment="left"
-                Click="ButtonNew_Click">New</Button>
-        
-        <Button Name="ButtonOK" Grid.Column="1" Grid.Row="12" Margin="5,5,5,5" Height="30" Width="100" HorizontalAlignment="Right"
+        <ListView Name="ListBoxSystemUserRoles" Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="12" Margin="3,3,3,3"
+							 ItemsSource="{Binding Path=SystemRoleViewCollection}">
+            <ListView.View>
+                <GridView>
+                    <GridViewColumn Header="Role" Width="200" DisplayMemberBinding="{Binding Path=SystemRole.RoleName}" />
+                    <GridViewColumn Header="Is In Role" Width="80">
+                        <GridViewColumn.CellTemplate>
+                            <DataTemplate>
+                                <CheckBox HorizontalAlignment="Center" VerticalAlignment="Center" IsChecked="{Binding Path=IsAMember}"></CheckBox>
+                            </DataTemplate>
+                        </GridViewColumn.CellTemplate>
+                    </GridViewColumn>
+
+                </GridView>
+            </ListView.View>
+        </ListView>
+
+        <Button Name="ButtonOK" Grid.Column="1" Grid.Row="13" Margin="5,5,5,5" Height="30" Width="100" HorizontalAlignment="Right"
                 Click="ButtonOK_Click">OK</Button>
         
     </Grid>
