--- a/YellowstonePathology/UI/Login/FinalizeAccession/SpecimenMappingPage.xaml
+++ b/YellowstonePathology/UI/Login/FinalizeAccession/SpecimenMappingPage.xaml
@@ -29,7 +29,7 @@
                 <TextBlock Grid.Column="1" Grid.Row="0" Margin="2,2,2,2" Text="Slide:"></TextBlock>
                 <TextBlock Grid.Column="2" Grid.Row="0" Margin="2,2,2,2" Text="{Binding Path=Label}"></TextBlock>
                 <TextBox Grid.Column="3" Grid.Row="0" Margin="2,2,2,2" Text="{Binding Path=ClientLabel}" Width="50"></TextBox>
-                <ComboBox Grid.Column="5" Grid.Row="0" Margin="2,2,2,2" HorizontalAlignment="Stretch" BorderBrush="LightGray" BorderThickness="1" Width="100" Text="{Binding Path=LocationId}" IsEditable="True">
+                <ComboBox Grid.Column="5" Grid.Row="0" Margin="2,2,2,2" HorizontalAlignment="Stretch" BorderBrush="LightGray" BorderThickness="1" Width="100" Text="{Binding Path=FacilityId}" IsEditable="True">
                     <ComboBoxItem>YPIBLGS</ComboBoxItem>
                     <ComboBoxItem>STJMSHLTH</ComboBoxItem>
                 </ComboBox>
@@ -58,8 +58,8 @@
                 </StackPanel>                
                 <TextBlock Grid.Column="2" Grid.Row="0" Margin="2,2,2,2" Text="{Binding Path=Label}"></TextBlock>
                 <TextBox Grid.Column="3" Grid.Row="0" Margin="2,2,2,2" Text="{Binding Path=ClientLabel}" Width="50"></TextBox>                
-                <TextBlock Grid.Column="4" Grid.Row="0" Margin="2,2,2,2" Text="{Binding Path=FacilityId}" HorizontalAlignment="Right"></TextBlock>
-                <ComboBox Grid.Column="5" Grid.Row="0" Margin="2,2,2,2" HorizontalAlignment="Stretch" BorderBrush="LightGray" BorderThickness="1" Width="100" Text="{Binding Path=LocationId}" IsEditable="True">
+                <TextBlock Grid.Column="4" Grid.Row="0" Margin="2,2,2,2" Text="{Binding Path=Location}" HorizontalAlignment="Right"></TextBlock>
+                <ComboBox Grid.Column="5" Grid.Row="0" Margin="2,2,2,2" HorizontalAlignment="Stretch" BorderBrush="LightGray" BorderThickness="1" Width="100" Text="{Binding Path=FacilityId}" IsEditable="True">
                     <ComboBoxItem>YPIBLGS</ComboBoxItem>
                     <ComboBoxItem>STJMSHLTH</ComboBoxItem>
                 </ComboBox>
