--- a/YellowstonePathology/UI/Client/FacilityEntry.xaml
+++ b/YellowstonePathology/UI/Client/FacilityEntry.xaml
@@ -5,8 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:YellowstonePathology.UI.Client"
         mc:Ignorable="d"
-        Title="Facility Entry" Height="500" Width="1300" WindowStyle="ToolWindow" WindowStartupLocation="CenterScreen">
-    <Grid>
+        Title="Facility Entry" Height="515" Width="620" FontSize="14" WindowStyle="ToolWindow" WindowStartupLocation="CenterScreen">
+    <Grid Margin="5">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto"></ColumnDefinition>
             <ColumnDefinition Width="*"></ColumnDefinition>
@@ -33,8 +33,8 @@
             <RowDefinition Height="Auto"></RowDefinition>
         </Grid.RowDefinitions>
 
-        <TextBlock Grid.Column="0" Grid.Row="1" Margin="2,2,2,2" HorizontalAlignment="Right" VerticalAlignment="Center">Facility Id:</TextBlock>
-        <TextBlock Grid.Column="1" Grid.Row="1" Name="TextBoxFacilityId" Text="{Binding Path=Facility.FacilityId}" Margin="2,2,2,2"></TextBlock>
+        <TextBlock Grid.Column="0" Grid.Row="1" Margin="5,5,5,5" HorizontalAlignment="Right" VerticalAlignment="Center">Facility Id:</TextBlock>
+        <TextBlock Grid.Column="1" Grid.Row="1" Name="TextBoxFacilityId" Text="{Binding Path=Facility.FacilityId}" Margin="5,5,5,5"></TextBlock>
 
         <TextBlock Grid.Column="0" Grid.Row="2" Margin="2,2,2,2" HorizontalAlignment="Right" VerticalAlignment="Center">Facility Name:</TextBlock>
         <TextBox Grid.Column="1" Grid.Row="2" Name="TextBoxFacilityName" Text="{Binding Path=Facility.FacilityName}" Margin="2,2,2,2" ></TextBox>
@@ -57,34 +57,46 @@
         <TextBlock Grid.Column="0" Grid.Row="8" Margin="2,2,2,2" HorizontalAlignment="Right" VerticalAlignment="Center">Phone Number:</TextBlock>
         <TextBox Grid.Column="1" Grid.Row="8" Text="{Binding Path=Facility.PhoneNumber}" Margin="2,2,2,2" VerticalAlignment="Center"></TextBox>
 
-        <TextBlock Grid.Column="0" Grid.Row="9" Margin="2,2,2,2" HorizontalAlignment="Right" VerticalAlignment="Center">TollFreePhoneNumber:</TextBlock>
+        <TextBlock Grid.Column="0" Grid.Row="9" Margin="2,2,2,2" HorizontalAlignment="Right" VerticalAlignment="Center">Toll Free Phone Number:</TextBlock>
         <TextBox Grid.Column="1" Grid.Row="9" Text="{Binding Path=Facility.TollFreePhoneNumber}" Margin="2,2,2,2" VerticalAlignment="Center"></TextBox>
 
         <TextBlock Grid.Column="0" Grid.Row="10" Margin="2,2,2,2" HorizontalAlignment="Right" VerticalAlignment="Center">Is Reference Lab:</TextBlock>
         <CheckBox Grid.Column="1" Grid.Row="10" IsChecked="{Binding Path=Facility.IsReferenceLab}" Margin="2,2,2,2" VerticalAlignment="Center"></CheckBox>
 
-        <TextBlock Grid.Column="0" Grid.Row="11" Margin="2,2,2,2" HorizontalAlignment="Right" VerticalAlignment="Center">Accessioning Location:</TextBlock>
-        <TextBox Grid.Column="1" Grid.Row="11" Text="{Binding Path=Facility.AccessioningLocation}" Margin="2,2,2,2" VerticalAlignment="Center"></TextBox>
+        <TextBlock Grid.Column="0" Grid.Row="11" Margin="2,2,2,2" HorizontalAlignment="Right" VerticalAlignment="Center">Client:</TextBlock>
+        <Grid Grid.Column="1" Grid.Row="11">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="Auto"/>
+            </Grid.ColumnDefinitions>
+            <TextBlock Grid.Column="0" Margin="2,2,2,2" VerticalAlignment="Center" Text="{Binding Path=Client.ClientName}" />
+            <Button Name="ButtonViewClients" Grid.Column="1" Margin="2,2,2,2" Height="25" Click="ButtonViewClients_Click">Select Client</Button>
+        </Grid>
+        
+        <TextBlock Grid.Column="0" Grid.Row="12" Margin="2,2,2,2" HorizontalAlignment="Right" VerticalAlignment="Center">Accessioning Location:</TextBlock>
+        <ComboBox Name="ComboBoxAccessioningLocation" Grid.Column="1" Grid.Row="12" Margin="2,2,2,2" VerticalAlignment="Center"
+                  ItemsSource="{Binding Path=AccessioningFacilities}" DisplayMemberPath="FacilityName" 
+                  SelectedValue="{Binding Path=Facility.AccessioningLocation}" SelectedValuePath="AccessioningLocation"
+                  SelectionChanged="ComboBoxAccessioningLocation_SelectionChanged"></ComboBox>
 
-        <TextBlock Grid.Column="0" Grid.Row="12" Margin="2,2,2,2" HorizontalAlignment="Right" VerticalAlignment="Center" >Location Abbreviation:</TextBlock>
-        <TextBox Grid.Column="1" Grid.Row="12" Text="{Binding Path=Facility.LocationAbbreviation}" Margin="2,2,2,2"></TextBox>
+        <TextBlock Grid.Column="0" Grid.Row="13" Margin="2,2,2,2" HorizontalAlignment="Right" VerticalAlignment="Center" >Location Abbreviation:</TextBlock>
+        <TextBlock Grid.Column="1" Grid.Row="13" Margin="2,2,2,2" VerticalAlignment="Center" Text="{Binding Path=Facility.LocationAbbreviation}">
+        </TextBlock>
 
-        <TextBlock Grid.Column="0" Grid.Row="13" Margin="2,2,2,2" HorizontalAlignment="Right" VerticalAlignment="Center">Fedex Account No:</TextBlock>
-        <TextBox Grid.Column="1" Grid.Row="13" Text="{Binding Path=Facility.FedexAccountNo}" Margin="2,2,2,2"></TextBox>
+        <TextBlock Grid.Column="0" Grid.Row="14" Margin="2,2,2,2" HorizontalAlignment="Right" VerticalAlignment="Center">Fedex Account No:</TextBlock>
+        <TextBox Grid.Column="1" Grid.Row="14" Text="{Binding Path=Facility.FedexAccountNo}" Margin="2,2,2,2"></TextBox>
 
-        <TextBlock Grid.Column="0" Grid.Row="14" Margin="2,2,2,2" HorizontalAlignment="Right" VerticalAlignment="Center">Fedex Payment Type:</TextBlock>
-        <TextBox Grid.Column="1" Grid.Row="14" Text="{Binding Path=Facility.FedexPaymentType}" Margin="2,2,2,2"></TextBox>
-
-        <TextBlock Grid.Column="0" Grid.Row="15" Margin="2,2,2,2" HorizontalAlignment="Right" VerticalAlignment="Center">Client Id:</TextBlock>
-        <TextBox Grid.Column="1" Grid.Row="15" Text="{Binding Path=Facility.ClientId}" Margin="2,2,2,2"></TextBox>
+        <TextBlock Grid.Column="0" Grid.Row="15" Margin="2,2,2,2" HorizontalAlignment="Right" VerticalAlignment="Center">Fedex Payment Type:</TextBlock>
+        <ComboBox Name="ComboBoxPaymentType" Grid.Column="1" Grid.Row="15" Margin="2,2,2,2" ItemsSource="{Binding Path= PaymentTypeList}"
+                  SelectedValue="{Binding Path=Facility.FedexPaymentType}">
+        </ComboBox>
 
         <TextBlock Grid.Column="0" Grid.Row="16" Margin="2,2,2,2" HorizontalAlignment="Right" VerticalAlignment="Center">Email Address:</TextBlock>
         <TextBox Grid.Column="1" Grid.Row="16" Text="{Binding Path=Facility.EmailAddress}" Margin="2,2,2,2"></TextBox>
 
-        <TextBlock Grid.Column="0" Grid.Row="17" Margin="2,2,2,2" HorizontalAlignment="Right" VerticalAlignment="Center">CLIALicenseNumber:</TextBlock>
+        <TextBlock Grid.Column="0" Grid.Row="17" Margin="2,2,2,2" HorizontalAlignment="Right" VerticalAlignment="Center">CLIA License Number:</TextBlock>
         <TextBox Grid.Column="1" Grid.Row="17" Text="{Binding Path=Facility.CLIALicenseNumber}" Margin="2,2,2,2"></TextBox>
 
-        <Button Grid.Column="0" Grid.Row="18" Margin="5" Width="100" Height="30" Content="New" Click="ButtonNew_Click"  IsEnabled="{Binding Path=NewButtonEnabled}"/>
         <Button Grid.Column="1" Grid.Row="18" Margin="5" Width="100" Height="30" HorizontalAlignment="Right" Content="OK" Click="ButtonOK_Click" />
 
     </Grid>
