--- a/YellowstonePathology/UI/Surgical/SuggestedAdditionalTestingPage.xaml
+++ b/YellowstonePathology/UI/Surgical/SuggestedAdditionalTestingPage.xaml
@@ -46,7 +46,7 @@
                 </TextBlock>
 
                 <TextBlock Grid.Column="0" Grid.Row="3" Margin="5,3,0,0" TextWrapping="Wrap">                    
-                    <Hyperlink Click="HyperLinkBRAFV600E_Click">BRAF V600E/K Mutation Analysis</Hyperlink>
+                    <Hyperlink Click="HyperLinkBRAFMutationAnalysis_Click">BRAF Mutation Analysis</Hyperlink>
                 </TextBlock>
 
                 <TextBlock Grid.Column="0" Grid.Row="4" Margin="5,3,0,0" TextWrapping="Wrap">                    
